project page started

--- a/src/app/entrepreneur/entrepreneur.page.html
+++ b/src/app/entrepreneur/entrepreneur.page.html
@@ -1,28 +1,43 @@
   <ion-header [translucent]="true">
   	<ion-toolbar>
-  		<ion-title><img src="assets/images/logo.svg" class="logo ion-margin-end" ><span>{{'LANDINGPAGE.Title' | translate}}</span></ion-title>
+  		<ion-title class="headerTitle"><img src="assets/images/logo.svg" class="logo ion-margin-end" ><span>{{'LANDINGPAGE.Title' | translate}}</span></ion-title>
   		<app-user-avatar slot="end"></app-user-avatar>
   	</ion-toolbar>
   </ion-header>
   <ion-content>
 
   	<ion-grid class="projectList">
-  		<ion-row>
-  			<ion-col>
-  				<ion-card class="cardProject">
-  					<ion-card-content class="ion-text-center  cardProjectContent" (click)="startNewProject()">
-  						<ion-icon name="add-outline" color="primary" class="iconNewProject"></ion-icon>
-  						<h2>Ajouter un projet</h2>
+  		<ion-row >
+        <ion-col  sizeLg="4" sizeMd="4" sizeXs="6">
+          <ion-card class="cardProject">
+            <ion-card-content class="ion-text-center  cardProjectContent" (click)="startNewProject()">
+              <ion-icon name="add-outline" color="primary" class="iconNewProject"></ion-icon>
+              <h2>Ajouter un projet</h2>
 
-  					</ion-card-content>
-  					<ion-row class="cardfooter ion-padding-start">
-  						<ion-col>
-  							<ion-icon name="bulb-outline" color="primary" class="ion-margin-end"></ion-icon><span>Decouvrez un projet demo	 </span>
-  						</ion-col>
-  					</ion-row>
-  				</ion-card>
-  			</ion-col>
-  		</ion-row>
-  	</ion-grid>
+            </ion-card-content>
+            <ion-row class="cardfooter ion-padding-start">
+              <ion-col>
+                <ion-icon name="bulb-outline" color="primary" class="ion-margin-end"></ion-icon><span>Decouvrez un projet demo   </span>
+              </ion-col>
+            </ion-row>
+          </ion-card>
+        </ion-col>
+
+        <ion-col  sizeLg="4" sizeMd="4" sizeXs="6" *ngFor="let project of projects">
+
+
+          <ion-card class="cardProject" >
+            <ion-card-content class="ion-text-center  cardProjectContent" [routerLink]="['/project/'+project.id]">
+              <h2>{{project.name}}</h2>
+
+            </ion-card-content>
+            <ion-row class="cardfooter ion-padding-start">
+              <ion-col>
+              </ion-col>
+            </ion-row>
+          </ion-card>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
 
   </ion-content>
