--- a/src/app/landing-page/landing-page.page.html
+++ b/src/app/landing-page/landing-page.page.html
@@ -37,7 +37,35 @@
 	</div>
 	<div class="subContent" >
 		<h1 id="content1" class="subContentTitle">{{'LANDINGPAGE.Content1Text' | translate}}</h1>
-		
+		<ion-grid class="iconsRow">
+			<ion-row>
+				<ion-col>
+					<ion-icon name="lock-closed-outline"></ion-icon>
+					<h2>{{'LANDINGPAGE.Icon1Title' | translate}}</h2>
+					<p>{{'LANDINGPAGE.Icon1Text' | translate}}</p>
+				</ion-col>
+				<ion-col>
+					<ion-icon name="cloud-outline"></ion-icon>
+					<h2>{{'LANDINGPAGE.Icon2Title' | translate}}</h2>
+					<p>{{'LANDINGPAGE.Icon2Text' | translate}}</p>
+				</ion-col>
+				<ion-col>
+					<ion-icon name="people-outline"></ion-icon>
+					<h2>{{'LANDINGPAGE.Icon3Title' | translate}}</h2>
+					<p>{{'LANDINGPAGE.Icon3Text' | translate}}</p>
+				</ion-col>
+				<ion-col>
+					<ion-icon name="phone-portrait-outline"></ion-icon>
+					<h2>{{'LANDINGPAGE.Icon4Title' | translate}}</h2>
+					<p>{{'LANDINGPAGE.Icon4Text' | translate}}</p>
+				</ion-col>
+				<ion-col>
+					<ion-icon name="construct-outline"></ion-icon>
+					<h2>{{'LANDINGPAGE.Icon5Title' | translate}}</h2>
+					<p>{{'LANDINGPAGE.Icon5Text' | translate}}</p>
+				</ion-col>
+			</ion-row>
+		</ion-grid>
 		<ion-grid class="pictureAndText">
 			<ion-row>
 				<ion-col size="3">
