--- a/src/app/landing-page/landing-page.page.html
+++ b/src/app/landing-page/landing-page.page.html
@@ -1,8 +1,8 @@
 <ion-header>
 	<ion-toolbar>
 
-		<ion-title><img src="assets/images/logo.svg" class="logo ion-margin-end" ><span>{{'LANDINGPAGE.Title' | translate}}</span></ion-title>
-		<ion-buttons slot="secondary" class="secondary"  class="ion-hide-md-down">
+		<ion-title><img src="assets/images/logo.svg" class="logo ion-margin-end" ><span class=" ion-hide-md-down">{{'LANDINGPAGE.Title' | translate}}</span></ion-title>
+		<ion-buttons slot="secondary" class="secondary">
 			<ion-button (click)="scrollTo('content1')">
 				{{'LANDINGPAGE.Title1' | translate}}
 			</ion-button>
