--- a/src/app/landing-page/landing-page.page.scss
+++ b/src/app/landing-page/landing-page.page.scss
@@ -77,9 +77,13 @@ span:after {
 	margin-left:auto;
 	margin-right:auto;
 }
+.screenCapture{
+	min-width:300px;
+}
 
 .iconsRow{
-	width: 57%;
+	width: 80%;
+	margin-top:120px;
 	@media(max-width: 768px) {
 		width: 100%;
 	}
@@ -87,6 +91,6 @@ span:after {
 	ion-icon{
 		font-size:3em;
 		color: var(--ion-color-primary);
-		margin-bottom:0.5em;
+		margin-bottom:0.2em;
 	}
 }
