--- a/src/app/project/project.page.html
+++ b/src/app/project/project.page.html
@@ -8,26 +8,29 @@
   	</ion-header>
   	<ion-content>
 
+  		<ion-split-pane contentId="project-content" when="md" class="sideMenu">
+  			<ion-menu contentId="project-content" type="push"  >
+  				<ion-content>
+  					<ion-item>
+              <img slot="start" [src]="project.summary.logoUrl" *ngIf="project.summary.logoUrl !==''" class="logo" />
+              <ion-icon slot="start" name="cube-outline" *ngIf="project.summary.logoUrl ===''"></ion-icon>
+              <h2>{{project.summary.name}}</h2>
+              <ion-icon slot="end" name="pencil-outline"  (click)="openPopover('projectSummary')"></ion-icon>
 
-  		<ion-content>
+            </ion-item>
 
-  			<ion-split-pane contentId="project-content">
-  				<ion-menu contentId="project-content" type="push" >
-  					<ion-content>
-  						<div><h2>{{project.name}}</h2></div>
+            <ion-list >
 
-  						<ion-list >
+              <ion-menu-toggle auto-hide="false"  *ngFor="let p of pages; let i = index" >
+               <ion-item (click)="selectedIndex = i" routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" [class.selected]="selectedIndex == i">
+                <ion-icon color="primary" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
+                <ion-label> {{p.title}}</ion-label>
+              </ion-item>		
 
-  							<ion-menu-toggle auto-hide="false"  *ngFor="let p of pages; let i = index" >
-  								<ion-item (click)="selectedIndex = i" routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" [class.selected]="selectedIndex == i">
-  									<ion-icon color="primary" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
-  									<ion-label> {{p.title}}</ion-label>
-  								</ion-item>
-
-  							</ion-menu-toggle>
-  						</ion-list>
-  					</ion-content>
-  				</ion-menu>
-  				<ion-router-outlet id="project-content"></ion-router-outlet>
-  			</ion-split-pane>
-  		</ion-content>
+            </ion-menu-toggle>
+          </ion-list>
+        </ion-content>
+      </ion-menu>
+      <ion-router-outlet id="project-content"></ion-router-outlet>
+    </ion-split-pane>
+  </ion-content>
