--- a/src/app/project/project.page.scss
+++ b/src/app/project/project.page.scss
@@ -1,3 +1,7 @@
+.sideMenu{
+  --side-max-width:200px;
+
+}
 ion-menu ion-content {
   --background: var(--ion-item-background, var(--ion-background-color, #fff));
 }
