--- a/src/app/project/executive/summary/popover-business-canvas/popover-business-canvas.component.scss
+++ b/src/app/project/executive/summary/popover-business-canvas/popover-business-canvas.component.scss
@@ -10,3 +10,14 @@
 .topPart{
 	max-height:300px;
 }
+
+.example{
+	font-style: italic;
+	font-size:0.6em;
+	margin-left:30px;
+}
+.positionBottom{
+	position: absolute;
+	bottom: 12px;	
+	width:100%;
+}
