--- a/src/app/user-avatar/popover/popover.component.html
+++ b/src/app/user-avatar/popover/popover.component.html
@@ -1,6 +1,12 @@
 <ion-content>
 	<ion-list>
-		<ion-item lines="none" (click)="logout()">
+		<ion-item button lines="none" (click)="navigateToProfile()">
+			<ion-label>{{'COMMON.Profile' | translate}}</ion-label>
+		</ion-item>
+		<ion-item lines="none" button lines="none" (click)="showProjects()">
+			<ion-label>{{'COMMON.MyProjects' | translate}}</ion-label>
+		</ion-item>
+		<ion-item lines="none" button (click)="logout()">
 			<ion-label>{{'COMMON.Logout' | translate}}</ion-label>
 		</ion-item>
 	</ion-list>
