--- a/src/app/landing-page/landing-page.page.html
+++ b/src/app/landing-page/landing-page.page.html
@@ -1,12 +1,20 @@
 <ion-header>
 	<ion-toolbar>
 
-		<ion-title><img src="assets/images/logo.svg" class="logo ion-margin-end" ><span class=" ion-hide-md-down">{{'LANDINGPAGE.Title' | translate}}</span></ion-title>
-		<ion-buttons slot="secondary" class="secondary">
-			<ion-button (click)="scrollTo('content1')">
+		<ion-title>
+			<img src="assets/images/logo.svg" class="logo ion-margin-end" >
+			<span >{{'LANDINGPAGE.Title' | translate}}
+				<ion-badge class="beta">Beta</ion-badge>
+			</span>
+		</ion-title>
+		<ion-buttons slot="secondary" class="secondary  ">
+			<ion-button (click)="scrollTo('content1')" class="ion-hide-sm-down ion-hide-md-down">
 				{{'LANDINGPAGE.Title1' | translate}}
 			</ion-button>
-			<ion-button (click)="scrollTo('content3')" >
+			<ion-button (click)="scrollTo('content2')" class=" ion-hide-md-down  ion-hide-lg-down" >
+				{{'LANDINGPAGE.Title2' | translate}}
+			</ion-button>
+			<ion-button  (click)="presentPartnersPopover()"  class="ion-hide-lg-down">
 				{{'LANDINGPAGE.Title3' | translate}}
 			</ion-button>
 		</ion-buttons>
@@ -20,7 +28,7 @@
 		</ion-buttons>
 	</ion-toolbar>
 </ion-header>
-<ion-content>
+<ion-content>	
 	<div class="mainContent">
 		<ion-grid>
 			<ion-row>
@@ -35,50 +43,136 @@
 			</ion-row>
 		</ion-grid>
 	</div>
-	<div class="subContent" >
-		<h1 id="content1" class="subContentTitle">{{'LANDINGPAGE.Content1Text' | translate}}</h1>
-		<ion-grid class="iconsRow">
-			<ion-row>
-				<ion-col>
-					<ion-icon name="lock-closed-outline"></ion-icon>
-					<h2>{{'LANDINGPAGE.Icon1Title' | translate}}</h2>
-					<p>{{'LANDINGPAGE.Icon1Text' | translate}}</p>
-				</ion-col>
-				<ion-col>
-					<ion-icon name="cloud-outline"></ion-icon>
-					<h2>{{'LANDINGPAGE.Icon2Title' | translate}}</h2>
-					<p>{{'LANDINGPAGE.Icon2Text' | translate}}</p>
-				</ion-col>
-				<ion-col>
-					<ion-icon name="people-outline"></ion-icon>
-					<h2>{{'LANDINGPAGE.Icon3Title' | translate}}</h2>
-					<p>{{'LANDINGPAGE.Icon3Text' | translate}}</p>
-				</ion-col>
-				<ion-col>
-					<ion-icon name="phone-portrait-outline"></ion-icon>
-					<h2>{{'LANDINGPAGE.Icon4Title' | translate}}</h2>
-					<p>{{'LANDINGPAGE.Icon4Text' | translate}}</p>
-				</ion-col>
-				<ion-col>
-					<ion-icon name="construct-outline"></ion-icon>
-					<h2>{{'LANDINGPAGE.Icon5Title' | translate}}</h2>
-					<p>{{'LANDINGPAGE.Icon5Text' | translate}}</p>
-				</ion-col>
-			</ion-row>
-		</ion-grid>
-		<ion-grid class="pictureAndText">
-			<ion-row>
-				<ion-col size="3">
-					<h2>{{'LANDINGPAGE.pictureAndText1Title' | translate}}</h2>
-					<ion-button color="primary" fill="solid"  [routerLink]="['/login']">
-						{{'LANDINGPAGE.KnowMoreButton' | translate}}
-					</ion-button>
-				</ion-col>
-				<ion-col size="9">
-					<img src="assets/images/journey.png">
-				</ion-col>
-			</ion-row>
-		</ion-grid>
-	</div> 			
+	<div class="subContent ion-padding" >
+		<ion-card class="subContentCard">
+			<ion-card-content>
+				<div >
+					<h1 class="subContentTitle ion-padding ion-text-center" >{{'LANDINGPAGE.subContentTitle1' | translate}}</h1>
+					<ion-grid class="subContentGrid">
+						<ion-row>
+							<ion-col class="ion-padding">`
+								<img src="https://image.freepik.com/free-photo/garage-doors_23-2148098575.jpg"/>
+							</ion-col>
+							<ion-col class="ion-padding">
+								<img src="https://image.freepik.com/free-photo/top-view-different-types-tools_23-2148428327.jpg"/>
+							</ion-col>
+							<ion-col class="ion-padding">
+								<img src="https://image.freepik.com/free-photo/colleagues-giving-fist-bump_53876-64857.jpg"/>
+							</ion-col>
+						</ion-row>
+						<ion-row>
+							<ion-col class="ion-padding">
+								<h2>{{'LANDINGPAGE.Icon1SubTitle' | translate}}</h2>
+								<p>{{'LANDINGPAGE.Icon1SubText' | translate}}</p>
+							</ion-col>
+							<ion-col class="ion-padding">
+								<h2>{{'LANDINGPAGE.Icon2SubTitle' | translate}}</h2>
+								<p>{{'LANDINGPAGE.Icon2SubText' | translate}}</p>
+							</ion-col>
+							<ion-col class="ion-padding">
+								<h2>{{'LANDINGPAGE.Icon3SubTitle' | translate}}</h2>
+								<p>{{'LANDINGPAGE.Icon3SubText' | translate}}</p>
+							</ion-col>
+						</ion-row>
+					</ion-grid>
+				</div>
+				<ion-grid class="iconsRow" id="content1">
+					<ion-row>
+						<ion-col>
+							<ion-icon name="lock-closed-outline"></ion-icon>
+							<h2>{{'LANDINGPAGE.Icon1Title' | translate}}</h2>
+							<p>{{'LANDINGPAGE.Icon1Text' | translate}}</p>
+						</ion-col>
+						<ion-col>
+							<ion-icon name="cloud-outline"></ion-icon>
+							<h2>{{'LANDINGPAGE.Icon2Title' | translate}}</h2>
+							<p>{{'LANDINGPAGE.Icon2Text' | translate}}</p>
+						</ion-col>
+						<ion-col>
+							<ion-icon name="people-outline"></ion-icon>
+							<h2>{{'LANDINGPAGE.Icon3Title' | translate}}</h2>
+							<p>{{'LANDINGPAGE.Icon3Text' | translate}}</p>
+						</ion-col>
+						<ion-col>
+							<ion-icon name="phone-portrait-outline"></ion-icon>
+							<h2>{{'LANDINGPAGE.Icon4Title' | translate}}</h2>
+							<p>{{'LANDINGPAGE.Icon4Text' | translate}}</p>
+						</ion-col>
+						<ion-col>
+							<ion-icon name="construct-outline"></ion-icon>
+							<h2>{{'LANDINGPAGE.Icon5Title' | translate}}</h2>
+							<p>{{'LANDINGPAGE.Icon5Text' | translate}}</p>
+						</ion-col>
+					</ion-row>
+				</ion-grid>
+				<div class="ion-text-center bigMargin">
+					<ion-button size="large" color="primary" class="" >{{'LANDINGPAGE.StartNow' | translate}}</ion-button>
+				</div>
+				<div class="subContent" >
+					<h1 class="ion-padding ion-text-center subContentTitle " >{{'LANDINGPAGE.Content2Title' | translate}}</h1>
+					<ion-grid class="pictureAndText"  >
+						<ion-row>
+							<ion-col>
+								<img src="assets/images/undraw_profile_6l1l.svg">
+							</ion-col>
+							<ion-col  class="ion-padding">
+								<h2>{{'LANDINGPAGE.pictureAndText1Title' | translate}}</h2>
+								<p>{{'LANDINGPAGE.pictureAndText1Text' | translate}}</p>
+							</ion-col>
+						</ion-row>
+					</ion-grid>
+					<ion-grid class="pictureAndText" id="content2">
+						<ion-row>
+							<ion-col class="ion-padding">
+								<h2>{{'LANDINGPAGE.pictureAndText2Title' | translate}}</h2>
+								<p>{{'LANDINGPAGE.pictureAndText2Text' | translate}}</p>
+							</ion-col>
+							<ion-col>
+								<img src="assets/images/undraw_our_solution_htvp.svg">
+							</ion-col>
+						</ion-row>
+					</ion-grid>
+					<ion-grid class="pictureAndText">
+						<ion-row>
+							<ion-col>
+								<img src="assets/images/undraw_real_time_collaboration_c62i.svg">
+							</ion-col>
+							<ion-col  class="ion-padding">
+								<h2>{{'LANDINGPAGE.pictureAndText3Title' | translate}}</h2>
+								<p>{{'LANDINGPAGE.pictureAndText3Text' | translate}}</p>
+							</ion-col>
+						</ion-row>
+					</ion-grid>
+					<ion-grid class="pictureAndText" >
+						<ion-row>
+							<ion-col  class="ion-padding">
+								<h2>{{'LANDINGPAGE.pictureAndText4Title' | translate}}</h2>
+								<p>{{'LANDINGPAGE.pictureAndText4Text' | translate}}</p>
+							</ion-col>
+							<ion-col>
+								<img src="assets/images/undraw_upgrade_06a0.svg">
+							</ion-col>
+						</ion-row>
+					</ion-grid>
+
+				</div>
+				<div class="bottomSection ion-text-center ion-padding" >
+					<a target="blank" href=" https://www.instagram.com/entrepreneur.studio" class="socialNetworkIcon ion-margin">
+						<ion-icon name="logo-instagram"></ion-icon>
+					</a>
+					<a target="blank" href="https://www.linkedin.com/company/entrepreneur-studio" class="socialNetworkIcon ion-margin">
+						<ion-icon name="logo-linkedin"></ion-icon>
+					</a>
+					<a target="blank" href="https://www.facebook.com/entrepreneurstudiocom" class="socialNetworkIcon ion-margin">
+						<ion-icon name="logo-facebook"></ion-icon>
+					</a>
+
+					<a href="mailto:contact@entrepreneur-studio.com"><h2>{{'LANDINGPAGE.contactUs' | translate}}</h2></a>
+					
+				</div> 		
+			</ion-card-content>
+		</ion-card>
+	</div>
+
 
 </ion-content>
