--- a/src/app/landing-page/landing-page.page.scss
+++ b/src/app/landing-page/landing-page.page.scss
@@ -8,12 +8,16 @@ span:after {
 	content:"";
 	display:block;
 }
+.subContentCard  .card-content-md {
+	padding: 0!important;
+}
 .mainContent{
 	padding:24px;
 	padding-top: 100px;
 	background: var(--ion-color-light-tint);
 	height:calc(100%);
-	min-height: 700px;
+	max-height: 668px;
+	min-height: 700px;	
 	h1{
 		font-size:4em;
 	}
@@ -60,37 +64,99 @@ span:after {
 	max-width: 1000px;
 	margin-left: auto;
 	margin-right: auto;
+	font-size:3em;
 }
 .journey{
 	background: var(--ion-color-light-tint);
 	height:80%;
 }
 .pictureAndText{
-	width: 80%;
-	h2{
+	width: 50%;
+	margin-top: 60px;
+	margin-left: auto;
+	margin-right: auto;	h2{
 		font-size:2em;
 	}
 	@media(max-width: 768px) {
 		width: 100%;
 	}
-	margin-top:60px;
-	margin-left:auto;
-	margin-right:auto;
+
 }
 .screenCapture{
 	min-width:300px;
 }
 
 .iconsRow{
-	width: 80%;
-	margin-top:120px;
+	width: 100%;
+	padding-top: 30px;
+	padding-bottom: 30px;
+	text-align: center;
+	margin-top:100px;
+	margin-bottom:100px;
+	background: var(--ion-color-primary);
+	color: var(--ion-color-primary-contrast);
 	@media(max-width: 768px) {
 		width: 100%;
+	}
+	h2{
+		font-size:2em;
 	}
 	text-align: center;
 	ion-icon{
 		font-size:3em;
-		color: var(--ion-color-primary);
 		margin-bottom:0.2em;
 	}
 }
+
+.beta{
+	margin-right:5px;
+	font-size: 	10px;
+	position:relative;	
+	top:-10px;
+}
+.subContentCard{
+	.card-content-md{
+		padding:0px!important;
+	}
+	position:relative;
+	top:-80px;
+	@media(max-width: 768px) {
+		top:-20px;
+	}
+}
+
+.subContentGrid{
+	text-align:center;
+	margin-top:30px;
+	margin-bottom:60px;
+
+	img{
+		max-width:60%;
+	}
+	h2{
+		font-size:2em;
+
+	}
+}
+
+.bigMargin{
+	margin-bottom:100px;
+}
+.bottomSection{
+	margin-top:30px;
+	background-color: var(--ion-color-dark);
+	position: relative;
+	bottom: -2px;
+	font-size: 3em;
+	color: var(--ion-color-dark-contrast);
+	a{
+		color: var(--ion-color-dark-contrast) !important;
+
+	}
+	.socialNetworkIcon{
+		color: var(--ion-color-dark-contrast);
+		font-size: 	1.5em;
+	}
+}
+
+
