--- a/src/app/landing-page/login/login.component.html
+++ b/src/app/landing-page/login/login.component.html
@@ -1,7 +1,71 @@
-<ion-content class="ion-padding">
-	<h1>{{'LOGIN.Title' | translate}}</h1>
-	<ion-button color="primary" (click)="loginWithGoogle()">
-		<ion-icon slot="start"  name="logo-google"></ion-icon>
-		{{'LOGIN.GoogleLogin' | translate}}
-	</ion-button>
+<ion-content >
+	<div *ngIf="mode ==='login'">
+		<div class="topPart ion-padding">
+			<ion-text class="ion-text-center"><h1>{{'LOGIN.Title' | translate}}</h1></ion-text>
+			<ion-text class="ion-text-center"><h3>{{'LOGIN.SubTitle' | translate}}</h3></ion-text>
+		</div>
+		<div class="ion-padding form">
+			<ion-item>
+				<ion-label>{{'LOGIN.Email' | translate}}</ion-label>
+				<ion-input type="email"  [(ngModel)] ="user.email"></ion-input>
+			</ion-item>
+			<ion-item>
+				<ion-label>{{'LOGIN.Password' | translate}}</ion-label>
+				<ion-input type="password" [(ngModel)] ="user.password"></ion-input>
+
+			</ion-item>
+			<ion-text class="ion-text-end" ><p class="forgotPassword" (click)="requestResetPasswordPage()" ><a >{{'LOGIN.ForgetPassword' | translate}}</a></p></ion-text>
+			<div class="ion-text-center ion-margin-top">
+				<ion-button color="primary" (click)="loginWithEmail()">
+					{{'LOGIN.EmailLogin' | translate}}
+				</ion-button>
+			</div>
+		</div>
+		<div class="ion-text-center ion-margin-top ion-margin-bottom">
+			<div class="separator -ion-padding"></div>
+			<ion-text color="medium" class="socialMediaText"><p>{{'LOGIN.LoginWithSocial' | translate}}</p></ion-text>
+
+			<ion-grid class="socialLoginButtons">
+				<ion-row>
+					<ion-col class="ion-text-center">
+						<ion-fab-button color="medium" class="socialLoginButton" (click)="loginWithGoogle()">
+							<ion-icon name="logo-google" ></ion-icon>
+						</ion-fab-button>
+					</ion-col>
+					<ion-col class="ion-text-center">
+						<ion-fab-button class="socialLoginButton"  color="medium">
+							<ion-icon name="logo-facebook"></ion-icon>
+						</ion-fab-button>
+					</ion-col>
+				</ion-row>
+			</ion-grid>
+
+		</div>
+	</div>
+	<div *ngIf="mode ==='resetPassword'">
+		<div class="topPart ion-padding">
+			<ion-text class="ion-text-center"><h1>{{'LOGIN.TitleForgoPassword' | translate}}</h1></ion-text>
+			<ion-text class="ion-text-center"><p>{{'LOGIN.SubTitleForgoPassword' | translate}}</p></ion-text>
+		</div>
+		<div class="ion-text-center ion-margin-top ">
+			<ion-item>
+				<ion-label position="floating" color="primary">{{'LOGIN.Email' | translate}}</ion-label>
+				<ion-input  name="email" type="text" [(ngModel)]="user.email"></ion-input>
+			</ion-item>
+
+			<ion-grid>
+				<ion-row>
+					<ion-col class="ion-text-start">
+						<ion-button color="medium" (click)="resetPasswordCancel()" >{{'LOGIN.ResetPasswordCancelButton' | translate}}</ion-button>
+					</ion-col>
+					<ion-col class="ion-text-end">
+						<ion-button (click)="resetPassword()" >{{'LOGIN.ResetPasswordButton' | translate}}</ion-button>
+					</ion-col>
+				</ion-row>
+			</ion-grid>
+		</div>
+		
+		
+	</div>
+
 </ion-content>
