--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -82,7 +82,7 @@
    * -------------------------------------------
    */
 
-  body {
+   body {
     --ion-color-primary: #428cff;
     --ion-color-primary-rgb: 66,140,255;
     --ion-color-primary-contrast: #ffffff;
@@ -152,7 +152,7 @@
    * -------------------------------------------
    */
 
-  .ios body {
+   .ios body {
     --ion-background-color: #000000;
     --ion-background-color-rgb: 0,0,0;
 
@@ -190,7 +190,7 @@
    * -------------------------------------------
    */
 
-  .md body {
+   .md body {
     --ion-background-color: #121212;
     --ion-background-color-rgb: 18,18,18;
 
@@ -229,8 +229,17 @@
 
 .registerPopover{
   --min-width:400px;
-  --width :800px;
+  --width :400px;
 }
+.loginPopover{
+ --min-width: 277px;
+ --width: calc(100% - 30px);
+ --max-width: 700px;
+}
+.onboardingPopup{
+  --min-width :500px;
+}
+
 .headerTitle{
   .logo{
     width:100px;
@@ -244,3 +253,4 @@
     display:block;
   }
 }
+
